feat: add v1.3 features (#100)
* chore(l10n): merge crowdin changes into v1.3 (#91)

* Update Crowdin configuration file

* docs(readme): add crowdin badge

* Update Crowdin configuration file

* chore(crowdin): add crowdin translations (#88)

* New translations app_en.arb (Romanian)

* New translations app_en.arb (French)

* New translations app_en.arb (Spanish)

* New translations app_en.arb (Afrikaans)

* New translations app_en.arb (Arabic)

* New translations app_en.arb (Catalan)

* New translations app_en.arb (Czech)

* New translations app_en.arb (Danish)

* New translations app_en.arb (German)

* New translations app_en.arb (Greek)

* New translations app_en.arb (Finnish)

* New translations app_en.arb (Hebrew)

* New translations app_en.arb (Hungarian)

* New translations app_en.arb (Italian)

* New translations app_en.arb (Japanese)

* New translations app_en.arb (Korean)

* New translations app_en.arb (Dutch)

* New translations app_en.arb (Norwegian)

* New translations app_en.arb (Polish)

* New translations app_en.arb (Portuguese)

* New translations app_en.arb (Russian)

* New translations app_en.arb (Serbian (Cyrillic))

* New translations app_en.arb (Swedish)

* New translations app_en.arb (Turkish)

* New translations app_en.arb (Ukrainian)

* New translations app_en.arb (Chinese Simplified)

* New translations app_en.arb (Chinese Traditional)

* New translations app_en.arb (English)

* New translations app_en.arb (Vietnamese)

* New translations app_en.arb (Portuguese, Brazilian)

* New translations app_en.arb (Chinese Simplified)

* chore(l10n): re-add pt translation (#90)

* docs(contributing): add crowdin

* Revert "chore(l10n): merge crowdin changes into v1.3 (#91)"

This reverts commit 8ac8a0d4d058cef2c576b7c08b23190cf60288c9.

* chore: remove crowdin.yml

* refactor: move theme configuration to ui folder

* chore(flutter): update to 3.35.3

* refactor(theme): fix imports

* refactor: move notification services to the data layer

* refactor(n

--- a/lib/l10n/app_pt.arb
+++ b/lib/l10n/app_pt.arb
@@ -68,6 +68,8 @@
   "settingsNotificationsSleepScheduleDescription": "Horário de acordar/dormir & frequência",
   "settingsNotificationsFrequency": "Frequência",
   "settingsTheme": "Tema",
+  "settingsHapticFeedback": "Feedback tátil",
+
   "setupAgeTextFieldInvalidValue": "Idade entre 10 e 120",
   "setupAgeTextFieldLabel": "Sua idade",
   "setupDataText": "Seus dados são armazenados no seu dispositivo.",
@@ -122,7 +124,36 @@
       }
     }
   },
+
+  "globalStatisticsTitle": "Estatísticas Globais",
+  "globalStatisticsNoDataDescription": "Seus dados aparecerão aqui em breve!",
+
+  "currentStreakStat": "Sequência atual",
+  "bestStreakStat": "Melhor sequência",
+  "totalIntakeStat": "Consumo total",
+  "averageIntakeStat": "Consumo médio",
+  "day": "dia",
+  "days": "dias",
+
+  "weeklyIntakeTitle": "Consumo semanal",
+  "weeklyIntakeNoData": "Ainda estamos montando seu gráfico de consumo semanal. Volte em breve para ver!",
+
   "system": "Sistema",
   "light": "Claro",
-  "dark": "Escuro"
+  "dark": "Escuro",
+
+  "historyIconSemanticLabel": "Histórico",
+  "settingsIconSemanticLabel": "Configurações",
+  "addCupIconSemanticLabel": "Adicionar copo",
+  "saveChangesIconSemanticLabel": "Salvar alterações",
+  "goBackIconSemanticLabel": "Voltar",
+  "waterRemoveIconSemanticLabel": "Remover {amount}",
+  "@waterRemoveIconSemanticLabel": {
+    "placeholders": {
+      "amount": {
+        "type": "String",
+        "example": "2ml"
+      }
+    }
+  }
 }
